--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </header>
       <article class="criminalsContainer"></article>
       <article class="officersContainter"></article>
+      <article class="convictionsContainer"></article>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
