made css improvements, looks much better

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
       </header>
       <article class="criminalsContainer"></article>
-      <article class="officersContainter"></article>
+      <article class="officersContainer"></article>
       <article class="convictionsContainer"></article>
     </main>
 
