added api and notes folder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       </header>
       <article class="criminalsContainer"></article>
       <article class="officersContainer"></article>
-      <article class="convictionsContainer"></article>
+      <article class="noteListButton"></article>
+
+      <div class="lists">
+        <article class="convictionsContainer"></article>
+        <aside class="noteListContainer"></aside>
+      </div>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
