working on glassdale 7. fields show up, no functionality, json is not working correctly

--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
           <div class="filter filters__officer"></div>
         </div>
       </header>
-      <article class="criminalsContainer"></article>
-      <article class="officersContainer"></article>
-      <article class="noteListButton"></article>
+      <article class="noteFormContainer"></article>
 
       <div class="lists">
-        <article class="convictionsContainer"></article>
-        <aside class="noteListContainer"></aside>
+        <article class="criminalsContainer"></article>
+        <article class="officersContainer"></article>
+
+        <aside class="noteListContainer">
+          <div class="noteListButton"></div>
+          <article class="noteList"></article>
+        </aside>
       </div>
     </main>
 
