changing approach completely

--- a/index.html
+++ b/index.html
@@ -29,24 +29,6 @@
       </div>
     </main>
 
-    <script type="module" src="./scripts/main.js">
-            document.getElementsByClassName("myBtn").onclick = ShowAssociates;
-
-            const ShowAssociates = () => {
-              document.querySelector(".criminal__card").innerHTML = `
-                <span id="associates" class="alibis">
-                    ${criminal.known_associates
-                      .map(
-                        (associate) =>
-                          `
-                          <div><strong>Name</strong>: ${associate.name}</div>
-                          <span><strong>Alibi</strong>: ${associate.alibi}</div><br>
-                      `
-                      )
-                      .join("")}
-                    </span>
-        `
-      }
-    </script>
+    <script type="module" src="./scripts/main.js"></script>
   </body>
 </html>
