--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           <div class="filter filters__crime"></div>
           <div class="filter filters__incarceration"></div>
           <div class="filter filters__officer"></div>
+          <div class="filter filters__witness"></div>
         </div>
       </header>
       <article class="noteFormContainer"></article>
