added notes hide button, currently getting undefined object in notelist

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <article class="noteFormContainer"></article>
 
       <aside class="noteListContainer">
-        <div class="noteListButton"></div>
+        <div class="showNoteListButton"></div>
+        <div class="hideNoteListButton"></div>
         <article class="noteList"></article>
       </aside>
 
