--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <div class="filter filters__incarceration"></div>
           <div class="filter filters__officer"></div>
           <div class="filter filters__witness"></div>
+          <div class="filter filters__facility"></div>
         </div>
       </header>
       <article class="noteFormContainer"></article>
